--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
                             <div class="form-group">
                                 <label for="was-read">WAS READ</label>
                                 <select name="was-read" id="was-read">
-                                    <option value="false">No</option>
-                                    <option value="true">Yes</option>
+                                    <option value="No">No</option>
+                                    <option value="Yes">Yes</option>
                                 </select>
                             </div>
                             <div class="form-group">
                                 <label for=recommended">RECOMMENDED</label>
                                 <select name="recommended" id="recommended">
-                                    <option value="false">No</option>
-                                    <option value="true">Yes</option>
+                                    <option value="No">No</option>
+                                    <option value="Yes">Yes</option>
                                 </select>
                             </div>
                         </form>
@@ -66,66 +66,6 @@
       <div class="content">
         <h3>My Library</h3>
         <div class="card-grid">
-          <div class="card">
-            <h4>Title</h4>
-            <span>Author</span>
-            <span>190 Pages</span>
-            <span>Was <span class="was-read">read</span></span>
-          </div>
-          <div class="card">
-            <h4>Title</h4>
-            <span>Author</span>
-            <span>190 Pages</span>
-            <span>Was <span class="was-read">read</span></span>
-          </div>
-          <div class="card">
-            <h4>Title</h4>
-            <span>Author</span>
-            <span>190 Pages</span>
-            <span>Was <span class="was-read">read</span></span>
-          </div>
-          <div class="card">
-            <h4>Title</h4>
-            <span>Author</span>
-            <span>190 Pages</span>
-            <span>Was <span class="was-read">read</span></span>
-          </div>
-          <div class="card">
-            <h4>Title</h4>
-            <span>Author</span>
-            <span>190 Pages</span>
-            <span>Was <span class="was-read">read</span></span>
-          </div>
-          <div class="card">
-            <h4>Title</h4>
-            <span>Author</span>
-            <span>190 Pages</span>
-            <span>Was <span class="was-read">read</span></span>
-          </div>
-          <div class="card">
-            <h4>Title</h4>
-            <span>Author</span>
-            <span>190 Pages</span>
-            <span>Was <span class="was-read">read</span></span>
-          </div>
-          <div class="card">
-            <h4>Title</h4>
-            <span>Author</span>
-            <span>190 Pages</span>
-            <span>Was <span class="was-read">read</span></span>
-          </div>
-          <div class="card">
-            <h4>Title</h4>
-            <span>Author</span>
-            <span>190 Pages</span>
-            <span>Was <span class="was-read">read</span></span>
-          </div>
-          <div class="card">
-            <h4>Title</h4>
-            <span>Author</span>
-            <span>190 Pages</span>
-            <span>Was <span class="was-read">read</span></span>
-          </div>
         </div>
       </div>
     </div>
