--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             Massimo
           </div>
           <span>Total Books:</span>
-          <span>Percentage of Books Read: <span class="perc-read">98%</span></span>
+          <span>Percentage of Books Read: <span class="perc-read">100%</span></span>
         </div>
         <div class="right">
                 <dialog id="add-dialog">
@@ -66,6 +66,18 @@
       <div class="content">
         <h3>My Library</h3>
         <div class="card-grid">
+          <!-- <div class="card" book-index="0">
+            <div class="card-top-row">
+            <h4>Chloe Biella</h4>
+            <button class="remove-book">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"><title>book-remove-multiple</title><path fill="currentColor" d="M13.09 20H5V6H3V20A2 2 0 0 0 5 22H13.81A5.5 5.5 0 0 1 13.09 20M19 2H14V7L12 5.5L10 7V2H9A2 2 0 0 0 7 4V16A2 2 0 0 0 9 18H13.09A6 6 0 0 1 21 13.34V4A2 2 0 0 0 19 2M22.54 16.88L20.41 19L22.54 21.12L21.12 22.54L19 20.41L16.88 22.54L15.46 21.12L17.59 19L15.46 16.88L16.88 15.46L19 17.59L21.12 15.46Z" /></svg>
+            </button>
+            </div>
+            <span>233</span>
+            <span>23</span>
+            <span>Read: <span class="was-read">No</span></span>
+            <span>Recommended: <span>No</span></span>
+            <button class="toggle-read">Toggle Read</button></div> -->
         </div>
       </div>
     </div>
